# index.js
@@ -3,7 +3,8 @@ let bodyParser = require('body-parser');
 let cors = require('cors');
 
 
-var returnUsers = require('./servers/controllers/users')
+const {returnUsers, createUser} = require('./servers/controllers/users');
+const {selectProducts, insertProducts} = require('./servers/controllers/products');
 
 let app = express();
 
@@ -14,11 +15,19 @@ app.use(bodyParser.urlencoded({
 }));
 app.use(bodyParser.json())
 
-//generamos una ruta que acepta un mensaje de tipo Get
+app.get('/users', returnUsers);
+app.post('/users', createUser)
 
-app.get('/users', returnUsers)
+//cuando se genera un nuevo usuario tengo que generar un token 
+//para cuando un usuario quiera modificar un producto o hacer una orden
+//tengo que usar el token para saber si esa persona es admin o no
+//si no es admin no puede modificar los productos ni los estados de la orden
 
-//Corremos nuestro servidor en el puerto 3000
+
+app.get('/products', selectProducts);
+app.post('/products', insertProducts)
+
+
 
 app.listen(3000, function () {
     console.log("El servidor esta corriendo en el puerto 3000")
